# example-by-cpp20

./: CMakeLists.txt  main.cpp
default-comparisons/: CMakeLists.txt  README.md  default-comparisons.cpp
